<resources>
    <string name="app_name">Finance Manager</string>
    <string name="filter_list">Filter list</string>
    <string name="settings">Settings</string>
    <string name="pref_general_settings">General Settings</string>
    <string name="pref_title_currency">Currency</string>
    <string name="pref_expense_settings">Expenses</string>
    <string name="pref_title_categories">Categories</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_title_about">About</string>


    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="category_color">Category color</string>
    <string name="choose_account">Choose account:</string>
    <string name="color">color</string>
    <string name="colors">Colors</string>
    <string name="color_palette">Color Palette</string>
    <string name="delete">Delete</string>
    <string name="delete_account_complete_question">Are you sure you want to delete this account ?</string>
    <string name="delete_account_title_question">Delete account ?</string>
    <string name="delete_category_complete_question">Are you sure you want to delete this category ?</string>
    <string name="delete_category_title_question">Delete category ?</string>
    <string name="delete_overhead_complete_question">Are you sure you want to delete this overhead ?</string>
    <string name="delete_overhead_title_question">Delete overhead ?</string>
    <string name="delete_transaction_complete_question">Are you sure you want to delete this transaction ?</string>
    <string name="delete_transaction_title_question">Delete transaction ? </string>
    <string name="done">Done</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_category">Edit category</string>
    <string name="enter_name">Enter name</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="name">Name</string>
    <string name="new_account">New account</string>
    <string name="new_category">New category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list_message">You have not entered any expenses yet.</string>
    <string name="empty_overheads_list_message">You have not entered any overheads yet.</string>
    <string name="distribution">Distribution</string>
    <string name="category">Category :</string>
    <string name="categories">Categories</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="app_icon">app icon</string>
    <string name="delete_transaction">Delete transaction</string>

    <!-- string for changelog dialog-->
    <string name="what_new">What is new?</string>
    <string name="ok">OK</string>
    <string name="enter_comment">Enter comment</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="overheads">Overheads</string>
    <string name="income_management">Income management</string>
    <string name="accounts">Accounts</string>
    <string name="account_color">Account color</string>
    <string name="transaction_color">Transaction color</string>
    <string name="current_balance">Current balance</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="initial_balance">Initial balance:</string>
    <string name="category_color_circle">Category color circle</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="time_icon">Time icon</string>
    <string name="comment_icon">Comment icon</string>
    <string name="_0_00">0,00</string>
    <string name="account_icon">Account icon</string>
    <string name="delete_last_icon">Delete last icon</string>
    <string name="unassigned">Unassigned</string>
    <string name="full_list_icon">Full list icon</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="to_account">To account</string>
    <string name="from_account_icon">From account icon</string>
    <string name="to_account_icon">To account icon</string>
    <string name="income_icon">Income icon</string>

</resources>
