<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="5dp"
    android:elevation="6dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:contentDescription="@string/pref_title_feedback"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:text="@string/new_category"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/iv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="7dp"
        android:src="@drawable/ic_done_white_24dp"
        android:clickable="true"
        android:contentDescription="@string/done" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="7dp"
        android:src="@drawable/ic_delete_white_24dp"
        android:clickable="false"
        android:contentDescription="@string/delete"
        android:visibility="invisible" />


</android.support.v7.widget.Toolbar>