<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp" >

    <LinearLayout
        android:id="@+id/ll_name_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_category_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="text"
            android:hint="@string/enter_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/color_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_name_section"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_category_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/color"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sp_category_color"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>