<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_from_account_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_account_balance_black_24dp"
                android:contentDescription="@string/from_account_icon" />

            <EditText
                android:id="@+id/et_from_account"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/iv_from_account_icon"
                android:layout_toEndOf="@+id/iv_from_account_icon"
                android:layout_alignBottom="@+id/iv_from_account_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/iv_to_account_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_from_account_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_account_balance_black_24dp"
                android:contentDescription="@string/to_account_icon" />

            <EditText
                android:id="@+id/et_to_account"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_from_account"
                android:layout_toRightOf="@+id/iv_to_account_icon"
                android:layout_toEndOf="@+id/iv_to_account_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/iv_to_account_icon" />

            <ImageView
                android:id="@+id/iv_calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_to_account_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_event_black_24dp"
                android:contentDescription="@string/calendar_icon" />

            <EditText
                android:id="@+id/et_transaction_date"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_to_account_icon"
                android:layout_toRightOf="@+id/iv_to_account_icon"
                android:layout_toEndOf="@+id/iv_to_account_icon"
                android:layout_alignBottom="@+id/iv_calendar_icon"
                android:inputType="text" />

            <ImageView
                android:id="@+id/iv_time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_to_account"
                android:layout_toRightOf="@+id/et_transaction_date"
                android:layout_toEndOf="@+id/et_transaction_date"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_access_time_black_24dp"
                android:contentDescription="@string/time_icon" />

            <EditText
                android:id="@+id/et_transaction_time"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_to_account"
                android:layout_alignBottom="@+id/iv_time_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/iv_time_icon"
                android:layout_toEndOf="@+id/iv_time_icon" />

            <ImageView
                android:id="@+id/iv_comment_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_calendar_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_sort_black_24dp"
                android:contentDescription="@string/comment_icon" />

            <EditText
                android:id="@+id/et_transaction_comment"
                android:inputType="text"
                android:hint="@string/enter_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_calendar_icon"
                android:layout_toRightOf="@+id/iv_comment_icon"
                android:layout_toEndOf="@+id/iv_comment_icon"
                android:layout_alignBottom="@+id/iv_comment_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>