<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_category_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle"
                android:layout_alignRight="@+id/iv_calendar_icon"
                android:layout_alignEnd="@+id/iv_calendar_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/et_category_name"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_above="@+id/iv_calendar_icon"
                android:contentDescription="@string/category_color_circle" />

            <EditText
                android:id="@+id/et_category_name"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/iv_calendar_icon"
                android:layout_toEndOf="@+id/iv_calendar_icon"
                android:layout_alignRight="@+id/et_overhead_comment"
                android:layout_alignEnd="@+id/et_overhead_comment" />

            <ImageView
                android:id="@+id/iv_calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_event_black_24dp"
                android:layout_below="@+id/et_category_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/calendar_icon"
                android:layout_above="@+id/tv_from_account_name" />

            <EditText
                android:id="@+id/et_on_day"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_category_name"
                android:layout_toRightOf="@+id/iv_calendar_icon"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/iv_account_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_account_balance_black_24dp"
                android:layout_below="@+id/iv_calendar_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/account_icon"
                android:layout_above="@+id/iv_comment" />

            <EditText
                android:id="@+id/et_from_account_name"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_on_day"
                android:layout_toRightOf="@+id/iv_account_icon"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/iv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_sort_black_24dp"
                android:contentDescription="@string/comment_icon"
                android:layout_below="@+id/et_from_account_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/et_overhead_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:hint="@string/enter_comment"
                android:layout_below="@+id/et_from_account_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/iv_account_icon"
                android:layout_toEndOf="@+id/iv_account_icon" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>